crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__a_bogus_comment_stops_at_gt_comma_even_if_preceded_by_two_dashes.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<?foo-->\"####)"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "?foo--": None,
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
