crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__comment_with_dash.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r#\"<!---x\"#)"
---
[
    Token {
        data: "-x",
        attrs: None,
        kind: Comment,
        is_implied: false,
    },
    Token {
        data: "",
        attrs: None,
        kind: CommentEnd,
        is_implied: false,
    },
]
