crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__doctype_with_eof_after_public.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r#\"<!DOCTYPE html PUBLIC\"#)"
---
[
    Token {
        data: "DOCTYPE html PUBLIC",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
