crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__doctype_with_publicid_and_systemid.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<!DOCTYPE html PUBLIC \"-//W3C//DTD HTML Transitional 4.01//EN\" \"-//W3C//DTD HTML Transitional 4.01//EN\">\"####)"
---
[
    Token {
        data: "doctype html public \"-",
        attrs: None,
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
