crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__doctype_with_single_hyphen_quoted_systemid.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<!DOCTYPE html SYSTEM '-//W3C//DTD HTML Transitional 4.01//EN'>\"####)"
---
[
    Token {
        data: "DOCTYPE html SYSTEM '-",
        attrs: None,
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
